tests/NormalTests/paczka1/fuzzy1/57140098.err
Error in line 1: 7dRImLLxEB A163 68,0
Error in line 4: 7dRImLLxEB S749 94,8
Error in line 5: 7dRImLLxEB A313 32,9
Error in line 6: 7dRImLLxEB A163 69,2
Error in line 23: 7dRImLLxEB A530 39,4
Error in line 26: 2qYd S749 26,9
Error in line 29: 2qYd A530 41,7
Error in line 38: sJ5 A313 43,11
Error in line 28: sJ5 A163 50,2
Error in line 36: 2qYd A530 87,8
